--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -36,3 +36,9 @@
 .box-shadow(){
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
+
+.make-ellipsis-text(){
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
